# bagel-1

src/: main.cc  run_bagel.cc
src/prop/: Makefile.am
src/prop/proptool/: debugging_utils.h  equation.cc  equation.h  moint.cc  moint.h  moint_computer.cc  moint_computer.h  moint_init.cc  moint_init.h  proptool.cc  proptool.h  proputils.cc  proputils.h
src/prop/proptool/algebraic_manipulator/: a_contrib_info.h  algebra_utils.h  braket.cc  braket.h  braket_full.cc  braket_full.h  braket_orb_exc_deriv.cc  braket_orb_exc_deriv.h  constraints.cc  constraints.h  ctrtensop.cc  ctrtensop.h  equation.cc  equation.h  equation_linearRM.cc  equation_linearRM.h  expression.cc  expression.h  expression_full.cc  expression_full.h  expression_orb_exc_deriv.cc  expression_orb_exc_deriv.h  gamma_generator.cc  gamma_generator.h  gamma_generator_base.cc  gamma_generator_base.h  gamma_generator_orb_exc_deriv.cc  gamma_generator_orb_exc_deriv.h  gamma_generator_redux.cc  gamma_generator_redux.h  gamma_info.cc  gamma_info.h  op_info.cc  op_info.h  range_block_info.cc  range_block_info.h  rdm_tester.cc  rdm_tester.h  spin_manager.cc  spin_manager.h  (+7 more)
src/prop/proptool/initialization/: equation_init.cc  equation_init.h  equation_init_linearRM.cc  equation_init_linearRM.h  equation_linearRM_init.cc  op_bk_term_expr_init.h  tensop_data_init.cc  tensop_info.cc  tensop_info.h
src/prop/proptool/integrals/: moint.cc  moint.h  moint_computer.cc  moint_computer.h  moint_init.cc  moint_init.h
src/prop/proptool/task_translation/: expression_computer.cc  expression_computer.h  tensop_computer.cc  tensop_computer.h  tensor_algop_info.h
src/prop/proptool/task_translator/: equation_computer.cc  equation_computer.h  equation_computer_linearRM.cc  equation_computer_linearRM.h  equation_linearRM_computer.cc  expression_computer.cc  expression_computer.h  rdm_computer.cc  rdm_computer.h  system_computer.cc  system_computer.h  tensop_computer.cc  tensop_computer.h  tensor_algop_info.h
(+102 files in other folders)
