AUTOMAKE_OPTIONS = subdir-objects
lib_LTLIBRARIES = libbagel_prop.la
libbagel_prop_la_SOURCES = multipole.cc hyperfine.cc momentum.cc momentum_london.cc momentum_point.cc current.cc overlap_point.cc moprint.cc sphmultipole.cc \
pseudospin/stevensop.cc pseudospin/pseudospin.cc \
proptool/proptool.cc proptool/moint.cc proptool/moint_init.cc proptool/moint_computer.cc proptool/equation.cc

AM_CXXFLAGS=-I$(top_srcdir)

